--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.4.6",
+        "maatwebsite/excel": "^3.1",
         "php-imap/php-imap": "^2.0",
+        "rap2hpoutre/fast-excel": "^4.1",
         "webklex/laravel-imap": "^2.4"
     },
     "require-dev": {
