--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php-imap/php-imap": "^2.0",
         "picqer/php-barcode-generator": "^2.2",
         "rap2hpoutre/fast-excel": "^4.1",
+        "realrashid/sweet-alert": "^7.0",
         "webklex/laravel-imap": "^2.4"
     },
     "require-dev": {
