--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "lsnepomuceno/laravel-a1-pdf-sign": "^1.0",
         "maatwebsite/excel": "^3.1",
         "php-imap/php-imap": "^2.0",
+        "phpseclib/phpseclib": "^3.0",
         "picqer/php-barcode-generator": "^2.2",
         "rap2hpoutre/fast-excel": "^4.1",
         "realrashid/sweet-alert": "^7.0",
+        "tecnickcom/tcpdf": "^6.6",
         "webklex/laravel-imap": "^2.4"
     },
     "require-dev": {
