--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "picqer/php-barcode-generator": "^2.2",
         "rap2hpoutre/fast-excel": "^4.1",
         "realrashid/sweet-alert": "^7.0",
+        "robrichards/xmlseclibs": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "tecnickcom/tcpdf": "^6.6",
         "webklex/laravel-imap": "^2.4"
